<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mx.com.dgom.sercco.android.prevent.act.CreateAccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView14"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_240_circle"
            android:padding="@dimen/dp_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/ps_26"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:id="@+id/textView6"
            android:textSize="@dimen/ps_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_persona"
            android:textSize="@dimen/ps_16"
            android:hint="@string/person_name_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:id="@+id/textView7"
            android:textSize="@dimen/ps_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txt_correo_persona"
            android:textSize="@dimen/ps_16"
            android:hint="@string/user_name_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/textView8"
            android:textSize="@dimen/ps_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_password_persona"
            android:textSize="@dimen/ps_16"
            android:hint="@string/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeate_password"
            android:id="@+id/textView9"
            android:textSize="@dimen/ps_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_password_persona_2"
            android:textSize="@dimen/ps_16"
            android:hint="@string/password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_create_account"
            android:id="@+id/button4"
            android:onClick="crearCuentaAction"
            android:layout_gravity="center_horizontal"
            android:background="@color/blue"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
