<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.com.dgom.sercco.android.prevent.act.LoginActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:context="mx.com.dgom.sercco.android.prevent.act.LoginActivity">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/dp_10"
            android:src="@drawable/p_logo_login"
            android:layout_marginBottom="@dimen/dp_20" />

        <!--
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

            -->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_name"
            android:textSize="@dimen/ps_16" />

        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/user_name_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/ps_16" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/password"
            android:textSize="@dimen/ps_16" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/ps_16" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="loginAction"
            android:text="@string/login"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="crearCuentaAction"
            android:text="@string/create_new_account"
            android:textColor="@color/blue"
            android:textSize="@dimen/ps_16"
            android:textStyle="italic"
            android:paddingTop="@dimen/dp_20" />

    </LinearLayout>
</RelativeLayout>
