<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.com.dgom.sercco.android.prevent.act.HomeActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"></include>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <fragment
                android:id="@+id/mapa"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!--
                        <include
                            android:id="@+id/reportar_delito_include"
                            layout="@layout/reportar_delito_frame"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
            -->

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_button_agregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="54dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="22dp"
                android:clickable="true"
                android:onClick="publicarCrimenAction"
                android:src="@drawable/ico_plus"
                app:layout_anchorGravity="bottom|right|end" />

            <include
                android:id="@+id/detalle_delito_include"
                layout="@layout/detalle_delito_include"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_help_camara">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_80"
                    android:id="@+id/imageView17"
                    android:src="@drawable/ico_camara_happy_left"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_ha_seleccionado_delitos"
                    android:id="@+id/textView5"
                    android:background="@drawable/message_rounded_corner"
                    android:padding="@dimen/dp_10"
                    android:layout_margin="@dimen/dp_5"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/time_bar_bg"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_10"
                android:id="@+id/layout_time_selector">

                <TextView
                    android:id="@+id/txt_seleccion_1_dia"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="seleccionarTiempoReporte"
                    android:tag="1"
                    android:text="@string/opcion_1_dia"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/time_button_bg" />

                <TextView
                    android:id="@+id/txt_seleccion_2_dia"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="seleccionarTiempoReporte"
                    android:tag="2"
                    android:text="@string/opcion_2_dia"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_seleccion_1_semana"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="seleccionarTiempoReporte"
                    android:tag="3"
                    android:text="@string/opcion_1_semana"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_seleccion_1_mes"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="seleccionarTiempoReporte"
                    android:tag="4"
                    android:text="@string/opcion_1_mes"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_seleccion_3_meses"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="seleccionarTiempoReporte"
                    android:tag="5"
                    android:text="@string/opcion_3_mes"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_loading_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@color/ColorPrimary"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pro_loading_delitos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_2"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Cargando datos"
                    android:textSize="@dimen/ps_22"
                    android:textStyle="bold|italic"
                    android:paddingLeft="@dimen/dp_10"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_pro"
                android:src="@drawable/icon_pro"
                android:padding="@dimen/dp_10"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </LinearLayout>

    <!-- The navigation drawer -->

    <!--
        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/gray_bg"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
    -->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/gray_bg"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

</android.support.v4.widget.DrawerLayout>